--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,13 @@
     --radius: 0.5rem
   }
 }
+
+/* Hide scrollbar for webkit browsers */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+}
